Se añade hero section y footer

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -23,7 +23,7 @@ import Logo from "../components/logo.astro";
         justify-content: space-between;
         align-items: center;
         background-color: #f8f9fa;
-        padding: 1rem;
+        padding: 0.2rem 1rem;
         gap: 1rem;
     }
     
