--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,14 +1,18 @@
 ---
-import astroLogo from '../assets/astro.svg';
 import background from '../assets/background.svg';
+import Boton from '../components/boton.astro';
+
 ---
 
 <div id="container">
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
 		<section id="hero">
-		
+			<h1>Diseño <span>Web</span></h1>
+			<p>Tecnologias para un diseño eficiente y rapido</p>
+			<Boton text="Sigueme en GitHub" link="https://github.com/Dreez-Web" />
 		</section>
+		<img src="../src/assets/astronauta.png" alt="">
 	</main>
 </div>
 
@@ -43,57 +47,11 @@ import background from '../assets/background.svg';
 	}
 
 	h1 {
-		font-size: 22px;
+		font-size: 3rem;
 		margin-top: 0.25em;
 	}
 
-	#links {
-		display: flex;
-		gap: 16px;
-	}
-
-	#links a {
-		display: flex;
-		align-items: center;
-		padding: 10px 12px;
-		color: #111827;
-		text-decoration: none;
-		transition: color 0.2s;
-	}
-
-	#links a:hover {
-		color: rgb(78, 80, 86);
-	}
-
-	#links a svg {
-		height: 1em;
-		margin-left: 8px;
-	}
-
-	#links a.button {
-		color: white;
-		background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
-		box-shadow:
-			inset 0 0 0 1px rgba(255, 255, 255, 0.12),
-			inset 0 -2px 0 rgba(0, 0, 0, 0.24);
-		border-radius: 10px;
-	}
-
-	#links a.button:hover {
-		color: rgb(230, 230, 230);
-		box-shadow: none;
-	}
-
-	pre {
-		font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
-			'DejaVu Sans Mono', monospace;
-		font-weight: normal;
-		background: linear-gradient(14deg, #d83333 0%, #f041ff 100%);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-clip: text;
-		margin: 0;
-	}
+	
 
 	h2 {
 		margin: 0 0 1em;
@@ -101,10 +59,12 @@ import background from '../assets/background.svg';
 		color: #111827;
 		font-size: 20px;
 	}
-
+	span {
+		color: #f03cae;
+	}
 	p {
 		color: #4b5563;
-		font-size: 16px;
+		font-size: 20px;
 		line-height: 24px;
 		letter-spacing: -0.006em;
 		margin: 0;
