--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -1,14 +1,16 @@
-<a
-  href="/"
-  class="link"
->
-  <span
-    class="span"
-    >✦</span
-  >
-  <!-- Logo Text -->
-  <span class="span-text">Portfolio</span>
-</a>
+
+
+    <a
+    href="/"
+    class="link"
+    >
+    <span
+        class="span"
+        >✦</span
+    >
+    <!-- Logo Text -->
+    <span class="span-text">Portfolio</span>
+    </a>
 
 <style>
     a{
@@ -24,13 +26,21 @@
         color: #333;
     }
 
-    .span{
+   .span{
         font-size: 1.25rem;
         transition: transform 200ms ease-in-out; /* ease-in-out + duration-300 */
     }
 
-    .span:hover{
+    .link:hover .span {
         transform: rotate(-12deg) scale(1.2);
-        
+    }
+
+    .span-text{
+        font-size: 1rem;
+        transition: transform 200ms ease-in-out; /* ease-in-out + duration-300 */
+    }
+
+    .link:hover .span-text {
+        transform: scale(1.1);
     }
 </style>
