--- a/src/pages/our.astro
+++ b/src/pages/our.astro
@@ -1,7 +1,9 @@
 --- 
 import Layout from '../layouts/Layout.astro';
+import Welcome from '../components/Welcome.astro';
+
 
 ---
 <Layout title="Nuestros servicios">
-    <h1>Nuestro equipo</h1>
+    <Welcome />
 </Layout>
