--- a/src/pages/our.astro
+++ b/src/pages/our.astro
@@ -1,9 +1,11 @@
 --- 
 import Layout from '../layouts/Layout.astro';
 import Welcome from '../components/Welcome.astro';
+import Footer from '../components/footer.astro';
 
 
 ---
 <Layout title="Nuestros servicios">
     <Welcome />
+    <Footer/>
 </Layout>
