--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/LayoutMain.astro';
 import Footer from '../components/footer.astro';
 import Separador from '../components/Separador.astro';
 import Cards from '../components/Card.astro';
