--- a/src/pages/our.astro
+++ b/src/pages/our.astro
@@ -1,5 +1,5 @@
 --- 
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/LayoutMain.astro';
 import Welcome from '../components/Welcome.astro';
 import Footer from '../components/footer.astro';
 
