--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Cards from '../components/Card.astro';
 	</div>
 	<Separador  text="Encuentrame aqui"/>
 	<Cards src="../src/assets/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-	
+	<h2>instagram</h2>
 	<Footer />
 </Layout>
 
