--- a/src/layouts/LayoutMain.astro
+++ b/src/layouts/LayoutMain.astro
@@ -1,8 +1,10 @@
 ---
-import Nav from '../components/Nav.astro'
+import Nav from '../components/Nav.astro';
 const { title } = Astro.props;
-
 ---
+
+
+
 
 <!DOCTYPE html>
 <html lang="en">
