--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -11,7 +11,7 @@ import Boton from '../components/boton.astro';
 			<p>Tecnologias para un diseño eficiente y rapido</p>
 			<Boton text="Sigueme en GitHub" link="https://github.com/Dreez-Web" />
 		</section>
-		<img src="../src/assets/astronauta.png" alt="">
+		<img src="/src/assets/astronauta.png" alt="">
 	</main>
 </div>
 
