Animaciones en hero section

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -17,7 +17,7 @@ import Logo from "../components/logo.astro";
 
 <style>
     div {
-        font-family: "Lato", serif;
+		font-family: 'Onest Variable', sans-serif;
         font-weight: 600;
         display: flex;
         justify-content: space-between;
