--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,7 @@
 ---
 const { src, alt, title, description} = Astro.props;
+import '@fontsource-variable/onest';
+
 ---
 
 
@@ -18,6 +20,8 @@ const { src, alt, title, description} = Astro.props;
 
   /* Estilos generales de la card */
   .card {
+    font-family: 'Onest Variable', sans-serif;
+
     width: 300px; /* Ancho de la card */
     margin: 10px;
     background-color: #181818; /* Fondo oscuro */
@@ -25,7 +29,6 @@ const { src, alt, title, description} = Astro.props;
     border-radius: 12px; /* Bordes redondeados */
     overflow: hidden; /* Oculta contenido que se sale */
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.4); /* Sombra */
-    font-family: "Lato", sans-serif;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   
