--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -14,7 +14,7 @@
 
 <style>
     a{
-        font-family: "Lato", serif;
+		font-family: 'Onest Variable', sans-serif;
         font-weight: 600;
         display: flex;
         justify-content: space-between;
