--- a/src/layouts/LayoutMain.astro
+++ b/src/layouts/LayoutMain.astro
@@ -1,6 +1,7 @@
 ---
 import Nav from '../components/Nav.astro';
 const { title } = Astro.props;
+import '@fontsource-variable/onest';
 ---
 
 
@@ -24,6 +25,7 @@ const { title } = Astro.props;
 <style>
 	html,
 	body {
+		font-family: 'Onest Variable', sans-serif;
 		margin: 0;
 		width: 100%;
 		height: 100%;
