--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Cards from '../components/Card.astro';
 	<Welcome />
 	<Separador  text="Revisa mis proyectos"/>
 	<div class="card-container">
-	<Cards src="/src/assets/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
+	<Cards src="/static/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 	<Cards src="../src/assets/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 	<Cards src="../src/assets/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 	</div>
