Imagen exportadadesde assets

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,6 @@
 ---
 import background from '../assets/background.svg';
+import astronauta from '../assets/astronauta.png';
 import Boton from '../components/boton.astro';
 ---
 
@@ -11,7 +12,7 @@ import Boton from '../components/boton.astro';
 			<p>Tecnologias para un diseño eficiente y rapido</p>
 			<Boton text="Sigueme en GitHub" link="https://github.com/Dreez-Web" />
 		</section>
-		<img src="/public/astronauta.png" alt="Astronauta" class="astronauta">
+		<img src={astronauta.src} alt="Astronauta" class="astronauta">
 	</main>
 </div>
 
