Imagenes a vercel importadas desde assets

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/LayoutMain.astro';
 import Footer from '../components/footer.astro';
 import Separador from '../components/Separador.astro';
 import Cards from '../components/Card.astro';
+import woman from '../assets/woman.jpg';
 
 ---
 
@@ -11,9 +12,9 @@ import Cards from '../components/Card.astro';
 	<Welcome />
 	<Separador  text="Revisa mis proyectos"/>
 	<div class="card-container">
-	<Cards src="/public/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-	<Cards src="/public/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-	<Cards src="/public/woman.jpg" alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
+	<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
+	<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
+	<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 	</div>
 	<Separador  text="Encuentrame aqui"/>
 	<Footer />
