add behavior smooth

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -25,6 +25,9 @@ import Logo from "../components/logo.astro";
         background-color: #f8f9fa;
         padding: 0.2rem 1rem;
         gap: 1rem;
+        position: sticky;
+        top: 0;
+        z-index: ;
     }
     
     ul {
