--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,16 +6,15 @@ import Separador from '../components/Separador.astro';
 import Cards from '../components/Card.astro';
 import woman from '../assets/woman.jpg';
 import section from '../components/SectionContainer.astro'
-
 ---
 
 <Layout title="Bienvenidos">
-	<section id="">
+	<section >
 		<Welcome />
 	</section>
 	
 	<section id="servicios">
-		<Separador  text="Revisa mis proyectos"/>
+		<Separador  text="Nuestros Servicios"/>
 		<div class="card-container">
 		<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 		<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
@@ -27,7 +26,7 @@ import section from '../components/SectionContainer.astro'
 	</section>
 	
 	<section id="proyectos">
-		<Separador  text="Encuentrame aqui"/>
+		<Separador  text="Nuestros Proyectos"/>
 		<div class="card-container">
 			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
@@ -39,7 +38,7 @@ import section from '../components/SectionContainer.astro'
 	</section>
 
 	<section id="sobre-mi">
-		<Separador  text="Encuentrame aqui"/>
+		<Separador  text="Sobre Mi"/>
 		<div class="card-container">
 			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
 			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
