--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,29 @@
 ---
 import menus from "../collections/menu.json";
-import Logo from "../components/logo.astro";
+import Logo from "../components/Logo.astro";
 ---
-<div>
-    <Logo />
-<div class="menu">
-{
-  menus.map((menu) => {
-    return (
-      <a href={menu.url} class="menu">{menu.name}</a>
-    )
-  })
-}
-</div>
-</div>
-
+<header>
+  <div>
+      <Logo />
+    <div class="menu">
+    {
+      menus.map((menu) => {
+        return (
+          <a href={menu.url} class="menu">{menu.name}</a>
+        )
+      })
+    }
+    </div>
+  </div>
+</header>
 <style>
+  header{
+		position: sticky;
+		top: 0;
+		z-index: 100;
+	}
     div {
-		font-family: 'Onest Variable', sans-serif;
+		    font-family: 'Onest Variable', sans-serif;
         font-weight: 600;
         display: flex;
         justify-content: space-between;
@@ -25,9 +31,6 @@ import Logo from "../components/logo.astro";
         background-color: #f8f9fa;
         padding: 0.2rem 1rem;
         gap: 1rem;
-        position: sticky;
-        top: 0;
-        z-index: ;
     }
     
     ul {
