--- a/src/layouts/LayoutMain.astro
+++ b/src/layouts/LayoutMain.astro
@@ -1,6 +1,7 @@
 ---
-import Nav from '../components/Nav.astro';
-const { title, id } = Astro.props;
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+const { title, id, description } = Astro.props;
 import '@fontsource-variable/onest';
 ---
 
@@ -9,18 +10,20 @@ import '@fontsource-variable/onest';
 
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{title}</title>
-</head>
-<header>
-    <Nav />
-</header>
-<body>
-    <slot />
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>{title}</title>
+	</head>
 </html>
+<body>
+	<Header/>
+	<main>
+     <slot />
+	</main>
+	<Footer/>
+</body>
+
 
 <style>
 	html,
@@ -31,11 +34,8 @@ import '@fontsource-variable/onest';
 		height: 100%;
 		scroll-behavior: smooth;
 	}
+	
 
-	header{
-		position: sticky;
-		top: 0;
-		z-index: 100;
-	}
+	
 	
 </style>
