--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,49 +1,92 @@
 ---
-import Hero from '../components/HeroSection.astro';
-import Layout from '../layouts/LayoutMain.astro';
-import Separador from '../components/Separador.astro';
-import Cards from '../components/Card.astro';
-import woman from '../assets/woman.jpg';
+import Hero from "../components/HeroSection.astro";
+import Layout from "../layouts/LayoutMain.astro";
+import Separador from "../components/Separador.astro";
+import Cards from "../components/Card.astro";
+import woman from "../assets/woman.jpg";
 ---
 
 <Layout title="Desarrollo y Programacion Web">
-	<Hero/>
-	
-	
-	<section id="servicios">
-		<Separador  text="Nuestros Servicios"/>
-		<div class="card-container">
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-		</div>
-	</section>
-	
-	<section id="proyectos">
-		<Separador  text="Nuestros Proyectos"/>
-		<div class="card-container">
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-		</div>	
-	</section>
+  <Hero />
 
-	<section id="sobre-mi">
-		<Separador  text="Sobre Mi"/>
-		<div class="card-container">
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-			<Cards src={woman.src} alt="Lisener" title="Musica" description="Musica para volar sin necesidad de salir de tu habitacion"/>
-		</div>	
-	</section>
+  <section id="servicios">
+    <Separador text="Nuestros Servicios" />
+    <div class="card-container">
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+    </div>
+  </section>
 
+  <section id="proyectos">
+    <Separador text="Nuestros Proyectos" />
+    <div class="card-container">
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+    </div>
+  </section>
+
+  <section id="sobre-mi">
+    <Separador text="Sobre Mi" />
+    <div class="card-container">
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+      <Cards
+        src={woman.src}
+        alt="Lisener"
+        title="Musica"
+        description="Musica para volar sin necesidad de salir de tu habitacion"
+      />
+    </div>
+  </section>
 </Layout>
 
 <style>
-	.card-container {
-	    display: flex; 
-  		flex-wrap: wrap; 
-  		justify-content: center; 
- 		gap: 20px; 
-	}
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
 </style>
