--- a/src/components/Icons/GoogleIcon.astro
+++ b/src/components/Icons/GoogleIcon.astro
@@ -1,6 +1,10 @@
+---
+const { size } = Astro.props;
+---
+
 <svg
-  width="125"
-  height="125"
+  width={size}
+  height={size}
   viewBox="0 0 256 262"
   xmlns="http://www.w3.org/2000/svg"
   preserveAspectRatio="xMidYMid"
