--- a/src/components/Icons/Html.astro
+++ b/src/components/Icons/Html.astro
@@ -1,7 +1,11 @@
+---
+const { size } = Astro.props;
+---
+
 <svg
   xmlns="http://www.w3.org/2000/svg"
-  width="125"
-  height="125"
+  width={size}
+  height={size}
   viewBox="0 0 452 520"
 >
   <path fill="#e34f26" d="M41 460L0 0h451l-41 460-185 52"></path>
