--- a/src/components/Icons/TailIcon.astro
+++ b/src/components/Icons/TailIcon.astro
@@ -1,7 +1,11 @@
+---
+const { size } = Astro.props;
+---
+
 <svg
   viewBox="0 0 256 154"
-  width="125"
-  height="125"
+  width={size}
+  height={size}
   xmlns="http://www.w3.org/2000/svg"
   preserveAspectRatio="xMidYMid"
 >
