--- a/src/components/Icons/CssIcon.astro
+++ b/src/components/Icons/CssIcon.astro
@@ -1,7 +1,11 @@
+---
+const { size } = Astro.props;
+---
+
 <svg
   xmlns="http://www.w3.org/2000/svg"
-  width="125"
-  height="125"
+  width={size}
+  height={size}
   viewBox="0 0 512 512"
   ><path
     fill="#264de4"
