--- a/src/components/Icons/WordIcon.astro
+++ b/src/components/Icons/WordIcon.astro
@@ -1,7 +1,11 @@
+---
+const { size } = Astro.props;
+---
+
 <svg
   viewBox="0 0 122.52 122.523"
-  width="125"
-  height="125"
+  width={size}
+  height={size}
   xmlns="http://www.w3.org/2000/svg"
   ><g fill="#21759b"
     ><path
