--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -9,14 +9,14 @@ import GoogleIcon from "../components/Icons/GoogleIcon.astro";
 ---
 
 <section class="tecnologias">
-  <ul>
-    <li><Html /></li>
-    <li><JsIcon /></li>
-    <li><CssIcon /></li>
-    <li><AstroIcon /></li>
-    <li><TailIcon /></li>
-    <li><WordIcon /></li>
-    <li><GoogleIcon /></li>
+  <ul class="icon-list">
+    <li><Html size="80px" /></li>
+    <li><JsIcon size="80px" /></li>
+    <li><CssIcon size="80px" /></li>
+    <li><AstroIcon size="80px" /></li>
+    <li><TailIcon size="80px" /></li>
+    <li><WordIcon size="80px" /></li>
+    <li><GoogleIcon size="80px" /></li>
   </ul>
 </section>
 
@@ -32,7 +32,9 @@ import GoogleIcon from "../components/Icons/GoogleIcon.astro";
     justify-content: center;
     align-items: center;
     list-style: none;
+    gap: 20px;
   }
+
   li {
     margin: 0 10px;
   }
